        'App.class_init' instead of 'Globals'.

      - Moved 'ApplicationDefaultPermissions' from 'App.class_init' to
        'AccessControl.Permissions', in order to break an import cycle
        in third-party code which avoids imports from 'Globals.'  Left
        the class importable from its old location without deprecation.

    Bugs fixed

      - Launchpad #267834: proper separation of HTTP header fields    
        using CRLF as requested by RFC 2616. (merged 90980, 92625)

      - Launchpad #348223: optimize catalog query by breaking out early from
        loop over indexes if the result set is already empty.

      - Launchpad ##332168: Connection.py: do not expose DB connection strings
        through exceptions

      - LP/#143873: Fixed problems when no HTTP_ACCEPT_CHARSET is in the
        request. This required an update of zope.publisher to 3.3.3.

      - LP/#324876: tighened regex for detecting the charset
        from a meta-equiv header

      - Acquisition wrappers now correctly proxy __iter__.

      - Products.PluginIndexes.PathIndex:  backported doc fixes /
        optimizations from trunk (and ExtendedPathIndex).

      - Launchpad #174705:  ensure that the error info object exposed to a
        'tal:on_error' handler has attributes visible to restricted code.

  Zope 2.10.7 (2008/10/24)

    Bugs fixed

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip
        (RestrictedPython).

      - Lauchpad #143736,#271395: fixed AttributeError' on _ltid in TempStorage

      - 'AccessControl.ZopeGuards.guarded_import' mapped some Unauthorized
        exceptions onto ImportErrors:  don't do that!  Also, removed
        mutable defaults from argument list, improved tests.

      - LP #281156:  'AccessControl.SecurityInfo.secureModule' dropped